# vid-downloader

./: Cargo.toml  README.md  flake.nix
src/: downloader.rs  downloader_error.rs  main.rs
src/playlist/: master_playlist.rs  media_playlist.rs  variant_playlist.rs
