[package]
name = "vid-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
headless_chrome = "1.0.15"
m3u8-rs = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winapi = { version = "0.3.9", features = ["jobapi2", "winnt", "processthreadsapi", "handleapi"] }
